<resources>
    <string name="app_name">电动自行车销售登记</string>
    <string name="app_company">版权所有@成都**科技有限公司</string>

    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="next">下一步</string>
    <string name="back_next">上一步</string>
    <string name="back">返回</string>
    <string name="money">¥ %1$s</string>
    <string name="tips">提示</string>
    <string name="commit">提交</string>
    <string name="completed">已完成</string>
    <string name="uncomplete">未完成</string>
    <string name="user_login">用户登录</string>
    <string name="setting">设置</string>
    <string name="electric_bicycle_register">电动自行车登记管理系统</string>
    <string name="dwgc">单位购车</string>
    <string name="grgc">个人购车</string>
    <string name="ywtj">业务统计</string>
    <string name="yjxx">预警信息</string>
    <string name="mine">我的</string>
    <string name="number_text">0123456789</string>
    <string name="dian_ji_xz">点击选择</string>
    <string name="number_and_letter">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.</string>
    <string name="number_and_X">1234567890X</string>
    <string name="number_telephone">1234567890-_()</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">--</string>
    <string name="server_setting">服务器设置</string>
    <string name="user_info">个人信息</string>
    <string name="authority">com.seatrend.cd.electricbicyclesalesystem.xj</string>
    <string name="car_query">车辆查询</string>
    <string name="please_enter_zcbm">请输入整车编码</string>
    <string name="details">详情</string>
    <string name="scan_null">扫描内容为空，请检查二维码或重新扫描</string>
    <string name="unknown_data">识别到未知类型的数据，请核对二维码后重试</string>
    <string name="passed">已通过</string>
    <string name="unpass">未通过</string>
    <string name="exit_collect_data_tips">正在进行数据采集，退出前，请确认您的数据是否提交，避免丢失</string>
    <string name="please_scan_insurance_rqcode">请先扫描保险信息二维码</string>
    <string name="save_success">保存成功</string>
    <string name="who_hello">%1$s您好</string>
    <string name="exit_press_again">再按一次即将退出</string>
    <string name="you_can_not_buy_car">抱歉，您暂时无法购买车辆</string>
    <string name="vin_collect">vin照片采集</string>
    <string name="xzksxm">选择开始项目</string>
    <string name="cur_version">当前版本:  %1$s</string>
    <string name="qfhcysj">请复核查验数据</string>
    <string name="qtxywxx">请填写业务信息</string>
    <string name="qscdjzlzp">请上传登记资料照片</string>
    <string name="bxxx">保险信息</string>
    <string name="register_success">登记信息提交成功！请为该电动自行车编发号牌。</string>
    <string name="hpbf">号牌编发</string>
    <string name="back_home">返回首页</string>
    <string name="djjg">登记结果</string>
    <string name="cxclhphzcbm">查询车辆号牌或整车编码</string>
    <string name="dagd">档案归档</string>
    <string name="share">share</string>
    <string name="tips_time">查验信息提交成功！%1$ds后自动进入业务登记</string>
    <string name="system_login_title">系统登录</string>
    <string name="system_login_remind">为了保证账户安全，\n请使用您本人二代身份证号进行登录。</string>
    <string name="system_login_editext_remind">请输入二代身份证号</string>
    <string name="system_login_next">下一步</string>
    <string name="second_step">将合格证的二维码放入框内，即可自动扫描</string>
    <string name="hgzjc">合格证查验</string>
    <string name="hgzcx_next">通过整车编码查询</string>
    <string name="zcbm_cy_hint">请输入15位整车编码</string>
    <string name="zcbm_cy_next">查询</string>
    <string name="zcbmcy">整车编码查验</string>
    <string name="clxx">车辆信息</string>

    <string name="carmsg_jscs">技术参数</string>
    <string name="carmsg_ggxx">公告信息</string>
    <string name="carmsg_clcy">车辆查验</string>
    <string name="carcy_wait">待判定</string>
    <string name="carcy_ok">合格</string>
    <string name="carcy_no">不合格</string>
    <string name="carcy_next">采集查验照片</string>
    <string name="carcy_commit">提交查验信息</string>
    <string name="carcy_info">查验信息</string>
    <string name="carcy_xiangmu">查验项目</string>
    <string name="carcy_photo">查验照片</string>
    <string name="carcy_remind">提示信息</string>
    <string name="car_register">注册登记</string>
    <string name="car_basedata">车辆基础数据</string>
    <string name="carbasedata_check_title">请检查以下数据：</string>

    <string name="carbasedata_check_hgzh">合格证号</string>
    <string name="carbasedata_check_ywlx">业务类型</string>
    <string name="carbasedata_check_clpp">车辆品牌</string>
    <string name="carbasedata_check_clxh">车辆型号</string>
    <string name="carbasedata_check_zcbm">整车编码</string>
    <string name="carbasedata_check_csys">车身颜色</string>
    <string name="carbasedata_check_sczl">实测质量（KG）</string>
    <string name="carbasedata_check_djh">电机号</string>
    <string name="carbasedata_check_sjsx">实际时速(Km/h)</string>
    <string name="carbasedata_check_zbzl">整备质量（KG）</string>
    <string name="carbasedata_check_bglr">变更内容</string>

    <string name="car_change_rb_1">1.业务信息</string>
    <string name="car_change_rb_2">2.所有人信息</string>
    <string name="car_change_rb_3">3.代理人信息</string>
    <string name="archive_title">档案归档</string>
    <string name="archive_title_all_select">全选</string>
    <string name="archive_title_all_commit">归档</string>

    <!-- CarCYActivity KEY　-->
    <string name="zcdj">注册登记</string>
    <string name="zydj">转移登记</string>
    <string name="bgdj">变更登记</string>
    <string name="bhpz">补/换牌证</string>
    <string name="xsdj">销售登记</string>
    <string name="bz_car">标准电动自行车</string>
    <string name="cbz_car">超标准电动自行车</string>
    <string name="bg_csys">变更车身颜色</string>
    <string name="bg_zcbm">变更整车编码</string>
    <string name="bg_sfz">变更身份证号码</string>
    <string name="zc_qy_off">禁止驶入受限制区域</string>
    <string name="zc_qy_on">不受限制区域</string>




</resources>
