<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seatrend.cd.electricbicyclesalesystem.activity.RegisterBicycleResultActivity"
    android:orientation="vertical">
    <include layout="@layout/common_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large_16sp"
        android:textColor="@color/textcolor"
        android:layout_margin="12dp"
        android:text="@string/register_success"/>
    <Button
        android:id="@+id/btn_hpbf"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_orange_bg1"
        android:textColor="@color/white"
        android:text="@string/hpbf"/>
    <TextView
        android:id="@+id/tv_back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_large_16sp"
        android:textColor="@color/theme_color"
        android:layout_margin="12dp"
        android:text="@string/back_home"/>
</LinearLayout>
