<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />
    <RadioGroup
        android:id="@+id/carinfo_rg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RadioButton
            style="@style/car_message_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/carmsg_rb"
            android:button="@null"
            android:text="@string/carmsg_jscs" />

        <RadioButton
            style="@style/car_message_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/carmsg_rb"
            android:button="@null"
            android:text="@string/carcy_xiangmu" />

        <RadioButton
            style="@style/car_message_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/carmsg_rb"
            android:button="@null"
            android:text="@string/carcy_photo" />
    </RadioGroup>
</LinearLayout>