<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <RadioGroup
        android:id="@+id/m_radio_group"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_ywxx"
            style="@style/car_message_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/carmsg_rb"
            android:button="@null"
            android:text="@string/car_change_rb_1" />

        <RadioButton
            android:id="@+id/rb_syrxx"
            style="@style/car_message_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/carmsg_rb"
            android:button="@null"
            android:text="@string/car_change_rb_2" />

        <RadioButton
            android:id="@+id/rb_dlrxx"
            style="@style/car_message_rb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/carmsg_rb"
            android:button="@null"
            android:text="@string/car_change_rb_3" />
    </RadioGroup>
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>
</LinearLayout>