<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@mipmap/iv_sfz" />

    <TextView
        style="@style/system_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:lineSpacingExtra="10dp"
        android:text="@string/system_login_remind" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="@drawable/system_login_editext">

        <EditText
            android:id="@+id/ed_sfzhm"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:background="@null"
            android:digits="0123456789X"
            android:hint="@string/system_login_editext_remind" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_system_next"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/system_login_next"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/system_login_next"
            android:layout_centerInParent="true"
            android:text="@string/system_login_next"/>
    </RelativeLayout>
</LinearLayout>