<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="*"
                    android:textColor="@color/red" />

                <TextView
                    style="@style/car_message_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/carbasedata_check_title" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="33dp"
                    android:text="@string/carbasedata_check_hgzh" />

                <TextView
                    style="@style/carbasedata_item_show"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="*"
                    android:textColor="@color/red" />

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:text="@string/carbasedata_check_ywlx" />

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />


                <Spinner
                    android:id="@+id/carbd_sp_ywlx"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1.2"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/carbd_ll_bglr"
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="*"
                    android:textColor="@color/red" />

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:text="@string/carbasedata_check_bglr" />

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />


                <Spinner
                    android:id="@+id/carbd_sp_bgnr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1.2"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="33dp"
                    android:text="@string/carbasedata_check_clpp" />

                <TextView
                    style="@style/carbasedata_item_show"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="33dp"
                    android:text="@string/carbasedata_check_clxh" />

                <TextView
                    style="@style/carbasedata_item_show"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="33dp"
                    android:text="@string/carbasedata_check_zcbm" />

                <TextView
                    style="@style/carbasedata_item_show"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="33dp"
                    android:text="@string/carbasedata_check_djh" />

                <TextView
                    style="@style/carbasedata_item_show"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="33dp"
                    android:text="@string/carbasedata_check_zbzl" />

                <TextView
                    style="@style/carbasedata_item_show"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="33dp"
                    android:text="@string/carbasedata_check_csys" />

                <TextView
                    style="@style/carbasedata_item_show"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="*"
                    android:textColor="@color/red" />

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:text="@string/carbasedata_check_sczl" />

                <TextView
                    style="@style/carbasedata_item_hightshow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="*"
                    android:textColor="@color/red" />

                <TextView
                    style="@style/carbasedata_item"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:text="@string/carbasedata_check_sjsx" />

                <TextView
                    style="@style/carbasedata_item_hightshow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="33dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="11" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:background="@color/gray" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <Button
            style="@style/car_message_clcy"
            android:layout_width="290dp"
            android:layout_height="42dp"
            android:background="@drawable/system_login_next"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>